ajustando autenticacao, login e registro